Fix Plyr color contrast

--- a/assets/css/_media.scss
+++ b/assets/css/_media.scss
@@ -1,5 +1,6 @@
 // Customizations for Plyr
 .plyr {
+	--plyr-audio-control-color: #000;
     --plyr-control-icon-size: 4.4rem;
 
 	grid-column: 1 / 4;
